# mate-desktop

./: configure.ac
docs/reference/mate-desktop/: Makefile.am
libmate-desktop/: Makefile.am  mate-aboutdialog.c  mate-bg.c  mate-bg.h  mate-colorbutton.c  mate-colorsel.c  mate-colorsel.h  mate-colorseldialog.c  mate-desktop-item.c  mate-desktop-utils.c  mate-rr-labeler.c  mate-rr-labeler.h  mate-rr.c  test.c
mate-about/: mate-about.c
tools/: Makefile.am  mate-color-select.c
